--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=Backend
 
+# Update the datasource URL to use the external database URL provided by Render
+spring.datasource.url=jdbc:postgresql://dpg-cp561n779t8c73epj7t0-a.frankfurt-postgres.render.com:5432/trystuff
 
-spring.datasource.url=jdbc:mysql://localhost:3306/trystuff
+# Update the datasource username and password
 spring.datasource.username=root
-spring.datasource.password=FMIUBB
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.password=3RMnsfeN2HVCVxQLZx5v8wc8BpSWXXG1
 
+# Specify the PostgreSQL driver class name
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Specify the Hibernate dialect for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Set the Hibernate DDL auto to update
 spring.jpa.hibernate.ddl-auto=update
