--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Backend
 
 # Update the datasource URL to use the external database URL provided by Render
-spring.datasource.url=postgres://root:3RMnsfeN2HVCVxQLZx5v8wc8BpSWXXG1@dpg-cp561n779t8c73epj7t0-a.frankfurt-postgres.render.com/trystuff
+spring.datasource.url=jdbc:postgresql://dpg-cp561n779t8c73epj7t0-a.frankfurt-postgres.render.com:5432/trystuff
 
 # Update the datasource username and password
 spring.datasource.username=root
